# wasm-compressor

./: .gitignore  Cargo.toml  README.md
test/: index.html  index.js  package-lock.json  package.json
