[package]
name = "wasm-compressor"
version = "0.1.0"
authors = ["Valeriu Paloş <hi@vpalos.com>"]
description = "Compress/Decompress streaming data at native speeds in the browser using WebAssembly."
license = "MIT/Apache-2.0"
# repository = "https://github.com/vpalos/wasm-compressor"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"